--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,10 @@ thead {
   border-color: #282b30;
 }
 
+.table-inverse th {
+	font-weight: 400;
+}
+
 .table-inverse.table-bordered {
   border: 1px solid #282b30;
 }
@@ -79,6 +83,11 @@ code {
 
 .details {
 	color: rgba(255,255,255,.4);
+	font-size: 16px;
+	font-weight: 400;
+}
+
+.figure-caption {
 	font-size: 16px;
 	font-weight: 400;
 }
